feat: Add enhanced widgets for portfolio including AboutSection, EnhancedDivider, and HeroSection
- Implement AboutSection with animated content and visual elements.
- Create EnhancedDivider for animated section dividers.
- Develop HeroSection for modern portfolio layout with staggered animations.
- Introduce FlutterFLogo for custom logo rendering.
- Add ProfessionalLoader for loading animations with full-screen support.
- Implement StaggeredAnimation for staggered entry of multiple children.
- Create utility widgets like ScaleOnHover and ShimmerLoading for interactive effects.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/images/logo.png
     - assets/images/profile.jpg
     - assets/images/smart_things.png
     - assets/images/mudhal_ai.png
